tests/snapshots/tui_split_file_select__split_file_select_long_path_elided.snap
---
source: tests/tui_split_file_select.rs
assertion_line: 80
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::split_file_select::render(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Refactor parser module                                               ",
        "22222222   Add feature X                                                        ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "               ┌ Split Out File ────────────────────────────────┐               ",
        "               │                                                │               ",
        "               │                                                │               ",
        "               │ Choose file to split out:                      │               ",
        "               │                                                │               ",
        "               │                                                │               ",
        "               │ ▸   …/reads/extract_files_and_hunks.rs         │               ",
        "               │     Cargo.toml                                 │               ",
        "               │                                                │               ",
        "               │            Enter Select   Esc Cancel           │               ",
        "               │                                                │               ",
        "               └────────────────────────────────────────────────┘               ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 42, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 55, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
